# shape-rotator-os

./: .editorconfig  .gitignore  .privacy-guard-allowlist  CLAUDE.md  PRD.md  README.md  package-lock.json  package.json  todo.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new-ask.yml
.github/workflows/: ask-ingest.yml  calendar-sync.yml  cohort-events-snapshot.yml  field-guide-release.yml  github-releases-sync.yml  google-calendar-watch-renewal.yml  os-pr-checks.yml  os-release.yml  pr-conflict-watch.yml
apps/field-guide/: main.js  package.json
apps/os/: TAURI-MOBILE.md  cohort-chat-node.js  daybook-main.js  (+25 more)
apps/os/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/os/src-tauri/capabilities/: default.json
apps/os/src-tauri/icons/: icon.icns
apps/os/src-tauri/src/: error.rs  json_store.rs  lib.rs  main.rs  menu.rs  paths.rs  secrets.rs  smoke.rs  state.rs  window_state.rs  windows.rs
apps/os/src-tauri/src/commands/: calendar.rs  context_vault.rs  easel.rs  env_shell.rs  mod.rs  notify.rs  prefs.rs  swarm.rs  swf_node.rs  updater.rs
apps/os/src-tauri/src/matrix/: diff.rs  mod.rs
apps/os/src-tauri/src/supervisor/: mod.rs  swarm.rs  swf_node.rs
cohort-data/: awards.yml  calendar-google-events.json  calendar-meta.json  calendar.ics  calendar.json  constellation-cues.json  schema.yml  session-insights.json  timeline.yml
docs/: COHORT_KEY_BUILD_INJECT.md  CONTEXT_SUBMISSIONS.md  INFORMATION_INDEX.html  INFORMATION_INDEX.md  INFORMATION_RULES.html  INFORMATION_RULES.md  INSTALL.md  MATRIX.md  MATRIX_DEVICE_LOGIN_REQUEST.md  MATRIX_OIDC_SETUP.md  MATURITY.md  PRD_RESEARCH_WORKSPACE.md  PR_QUEUE.md  README.md  RELEASE_NOTES_v0.3.10-rc.2.md  RELEASE_NOTES_v0.3.8-rc.2.md  SWARM_ATLAS_PRD.md  TRANSCRIPT_ENGINE.md  agentic-mirror-and-chat.md  calendar-guest-mirror-setup.md  calendar-ingress-launch-checklist.md  calendar-ingress-quality-audit.md  calendar-ingress.env.example  calendar-meet-supabase-integration.md  calendar-transcript-system-map.html  cohort-legibility-integration.md  product-review.html  reviewed-transcript-map.md  transcript-calendar-coverage-index.md  transcript-distillation-playbook.md  two-way-base-layer-build.md  two-way-contribution-layer.md  your-mirror-receive-and-chat.md
scripts/: README.md  apply-google-calendar-launch.js  apply-transcript-drive-operations.mjs  ask-ingest-workflow.test.mjs  audit-calendar-capture.js  audit-supabase-evidence-cards.mjs  audit-transcript-calendar-coverage.mjs  audit-transcript-labels.mjs  backfill-google-calendar.js  build-bundles.js  build-calendar-from-google.js  build-calendar-from-google.test.js  build-cohort-connections.mjs  build-cohort-insights.mjs  build-cohort-timeline.js  build-context-vault-corpus.js  build-ics.js  build-ics.test.js  build-public-transcript-articles.mjs  build-standing-weekly.mjs  build-standing-weekly.test.mjs  build-transcript-evidence.js  build-transcript-talk-index-html.mjs  build-web-journal.js  calendar-capture-audit.test.js  calendar-ingress-parity.test.mjs  calendar-ingress-setup.test.mjs  calendar-integration.test.js  calendar-supabase-grid.test.mjs  calendar-supabase-smoke.test.js  calendar-surface-source-id-scan.test.mjs  calendar-sync-workflow.test.mjs  check-calendar-ingress-policy-drift.mjs  check-calendar-ingress-setup.js  check-calendar-transcript-matches.mjs  check-cohort-detail-parity.mjs  check-commit-privacy-boundary.mjs  check-commit-privacy-boundary.test.mjs  check-github-progress.mjs  check-github-releases.mjs  (+141 more)
specs/: agent.md  matrix-parity.md  matrix.md
supabase/: config.toml
(+486 files in other folders)
