[package]
name = "shape-rotator-os"
version = "0.2.27"
description = "Shape Rotator OS"
authors = ["Shape Rotator"]
edition = "2021"
# Bumped from 1.77 for matrix-sdk 0.17 (its workspace declares rust-version 1.93).
rust-version = "1.93"

# The library the binary links against (Tauri's mobile/desktop split).
[lib]
name = "shape_rotator_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# E2E only. Injects a W3C WebDriver bridge into the WKWebView so WebdriverIO
# can drive the app on macOS (where no native WKWebView driver exists). Optional
# + behind the `webdriver` feature so it can never reach a release/notarized
# build. Built for tests via `cargo build --features webdriver`.
tauri-plugin-webdriver-automation = { version = "0.1", optional = true }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
walkdir = "2"
dirs = "5"
mime = "0.3"

# ── Matrix (matrix-rust-sdk) ─────────────────────────────────────────
# Powers the "matrix" tab. All-platform (NOT desktop-gated) — the client,
# sync, crypto and store must run on iOS/Android too. TLS (rustls) is
# bundled unconditionally by matrix-sdk, so no tls feature is passed.
# `bundled-sqlite` statically links SQLite for clean cross-platform bundles.
# matrix-sdk-ui re-exports eyeball-im (the VectorDiff reactive stream) and
# pulls matrix-sdk with e2e-encryption already on; we add the store + extras.
matrix-sdk = { version = "0.17", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "bundled-sqlite",
    "automatic-room-key-forwarding",
    "markdown",
    "sso-login",
    "qrcode",
] }
matrix-sdk-ui = { version = "0.17", default-features = false }

# ── Desktop-only deps ────────────────────────────────────────────────
# These power subsystems that cannot exist on iOS/Android (subprocess
# supervision, OS keychain, auto-update). Gated by target_os so the
# mobile crate never tries to build them. Cargo evaluates these cfgs
# statically (no build-script `desktop`/`mobile` cfg is available here),
# so we key off the concrete mobile OSes.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(all(unix, not(any(target_os = "ios", target_os = "android"))))'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
# default Tauri custom-protocol for production asset serving
custom-protocol = ["tauri/custom-protocol"]
# E2E WebDriver bridge. Enable ONLY for the test binary (cargo build --features
# webdriver). Never enable for release/notarized builds.
webdriver = ["dep:tauri-plugin-webdriver-automation"]
